--- a/_site.yml
+++ b/_site.yml
@@ -5,9 +5,9 @@ navbar:
     - text: "Stars Dataset"
       href: Star_DataAnalysis.html
     - text: "Diamonds Dataset"
-      href: about.html
+      href: Diamonds_dataset.html
     - text: "Cars93 Dataset"
-      href: about.html
+      href: cars93_dataset.html
     - text: "Titanic Analysis"
       href: about.html
 output:
